Closed Bug 423696 Opened 16 years ago Closed 16 years ago

Value change events not fired for text inputs and editable combos

Categories

(Core :: Disability Access APIs, defect, P2)

x86
Windows XP
defect

Tracking

()

RESOLVED FIXED
mozilla1.9

People

(Reporter: aaronlev, Assigned: aaronlev)

References

Details

(Keywords: access)

Attachments

(1 file)

This came up while talking to a major screen reader vendor. They workaround they've been using for Firefox has broken other things, so they need us to fire the proper value change events when a text field changes.
Flags: blocking1.9?
I'm not Surkov, but I found this:

> void
> +nsDocAccessible::FireValueChangeForTextFields(nsIAccessible *aPossibleTextFieldAccessible)
> +{
> +  if (Role(aPossibleTextFieldAccessible) != nsIAccessibleRole::ROLE_ENTRY)

Better to add an NS_ENSURE_ARG_POINTER(aPossibleTextFieldAccessible); before the if statement?
Marco, I can add that but it's not a huge thing either way. The 2 consumers of that methods never pass null.
Try server builds that contain this and other fixes are arriving here:
https://build.mozilla.org/tryserver-builds/2008-03-18_12:36-aaronleventhal@moonset.net-Fixes_423700_423696_423681_423570/
Target Milestone: --- → mozilla1.9beta5
Comment on attachment 310298 [details] [diff] [review]
Fire value change for ROLE_ENTRY whenever contents change -- but remove duplicate events so it is fired only once

r=me, the patch contains patch from bug 423698, be sure to check in separately
Attachment #310298 - Flags: review?(surkov.alexander)
Attachment #310298 - Flags: review+
Attachment #310298 - Flags: approval1.9?
TM --> mozilla1.9, this won't block beta 5. If you disagree, please reset the TM to beta5 and explain why it needs to block beta.
Target Milestone: mozilla1.9beta5 → mozilla1.9
Comment on attachment 310298 [details] [diff] [review]
Fire value change for ROLE_ENTRY whenever contents change -- but remove duplicate events so it is fired only once

a1.9=beltzner
Attachment #310298 - Flags: approval1.9? → approval1.9+
Flags: blocking1.9? → blocking1.9+
Priority: -- → P2
Checking in accessible/src/base/nsDocAccessible.cpp;
/cvsroot/mozilla/accessible/src/base/nsDocAccessible.cpp,v  <--  nsDocAccessible.cpp
new revision: 1.238; previous revision: 1.237
done
Checking in accessible/src/base/nsDocAccessible.h;
/cvsroot/mozilla/accessible/src/base/nsDocAccessible.h,v  <--  nsDocAccessible.h
new revision: 1.79; previous revision: 1.78
done
Checking in accessible/src/base/nsRootAccessible.cpp;
/cvsroot/mozilla/accessible/src/base/nsRootAccessible.cpp,v  <--  nsRootAccessible.cpp
new revision: 1.265; previous revision: 1.264
done

Surkov meant to mark this fixed.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
in-testsuite?
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: