Bug 423696 - Value change events not fired for text inputs and editable combos, patch=aaronlev, r=me, a=beltzner